GlobalBattle implemented
Still some tests to be done and